# hypecast

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  Procfile  README.md  agent.py  debug_tts.py  debug_tts_async.py  debug_tts_stream.py  pyproject.toml  railway.json  test.py  test_agent_finish.py  test_agent_init.py  test_agent_methods.py  test_agent_run.py  test_events.py  test_imports.py  test_realtime.py  test_run_forever.py  test_signatures.py  test_vlm_event.py
backend/app/: __init__.py  main.py  models.py  store.py
backend/models/: __init__.py  commentary.py  highlight.py  session.py
backend/routes/: __init__.py  commentary_ws.py  detections_ws.py  sessions.py
backend/services/: __init__.py  commentary_hub.py  commentary_tracker.py  detections_hub.py  frame_capture.py  gcs.py  rfdetr_detection.py  store.py  stream_token.py  tts_fallback.py
backend/src/hypecast_backend/: __init__.py
backend/tests/: test_agent_core_pipeline.py  test_agent_runner.py  test_commentary_hub.py  test_commentary_tracker.py  test_elevenlabs_tts.py  test_frame_capture.py  test_gcs.py  test_gemini_realtime.py  test_main.py  test_models.py  test_rfdetr_detection.py  test_sessions_api.py  test_tts_fallback.py
docs/: debug-camera-join-timeout.md  spec.md  sprints.md
frontend/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/game/[sessionId]/: page.tsx
frontend/src/components/: GameShell.tsx  HypecastApp.tsx
frontend/src/components/__tests__/: CameraView.test.tsx  SpectatorView.test.tsx
frontend/src/components/game/: CameraView.tsx  CommentaryTranscript.tsx  SpectatorView.tsx
frontend/src/hooks/: useDeviceRole.ts  useSession.ts  useSpectatorSession.ts
frontend/src/hooks/__tests__/: useDeviceRole.test.tsx  useSession.test.ts
frontend/src/lib/: api.ts
frontend/src/mocks/: sessionMocks.ts
frontend/src/types/: commentary.ts  reel.ts  session.ts
frontend/src/types/__tests__/: session.test.ts
tasks/: lessons.md  todo.md
