[project]
name = "hypecast-backend"
version = "0.1.0"
description = "HypeCast FastAPI backend"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
  "vision-agents[gemini,elevenlabs,getstream]>=0.3.8",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
  "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100
